@@ -10,6 +10,7 @@ Version 0.5.1
 * Correctly bundled fonts.
 * Fixed a bug in one of Cale's scenes.
 * Fixed Fera being bugged.
+* Fixed Miranda first date bug.
 
 --------------------------------------------
              PREVIOUS VERSIONS
